--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
           # Stop the build if there are Python syntax errors or undefined names
           flake8 rose_sdk --count --select=E9,F63,F7,F82 --show-source --statistics
           # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 rose_sdk --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 rose_sdk --count --exit-zero --max-complexity=10 --max-line-length=127 --ignore=C901,W503 --statistics
 
       - name: Type check with mypy
         run: |
