--- a/mypy.ini
+++ b/mypy.ini
@@ -14,7 +14,7 @@ warn_unreachable = True
 strict_equality = True
 
 # Ignore specific error types that are too complex to fix right now
-disable_error_code = index, attr-defined, operator, assignment, call-overload, return-value, arg-type, no-any-return, unreachable, unused-ignore, misc, return
+disable_error_code = index, attr-defined, operator, assignment, call-overload, return-value, arg-type, no-any-return, unreachable, unused-ignore, misc, return, import-untyped
 
 # Ignore specific files with complex type issues
 [mypy.rose_sdk.utils.schema]
