--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,3 +41,4 @@ jobs:
           body_path: release_notes.md
           draft: false
           prerelease: false
+          fail_on_unmatched: false
